read-cache-after-write aware list and byIndex (#3345)
* feat: strong consistency variant for informer list and byIndex (#3316)

Signed-off-by: Attila Mészáros <a_meszaros@apple.com>
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Co-authored-by: Chris Laprun <metacosm@users.noreply.github.com>
Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* Read-cache-after-write aware list and by index

Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* wip

Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* Potential fix for pull request finding

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* Potential fix for pull request finding

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* fixes from PR

Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* wip

Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* Potential fix for pull request finding

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* wip

Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* Potential fix for pull request finding

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* wip

Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* refactor: minor improvements

Signed-off-by: Chris Laprun <metacosm@gmail.com>
Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* wip

Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* wip

Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* Potential fix for pull request finding

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Attila Mészáros <a_meszaros@apple.com>

* wi