@@ -107,10 +107,6 @@ class InformerManager<R extends HasMetadata, C extends Informable<R>>
     }
   }
 
-  C configuration() {
-    return configuration;
-  }
-
   public void changeNamespaces(Set<String> namespaces) {
     var sourcesToRemove =
         sources.keySet().stream().filter(k -> !namespaces.contains(k)).collect(Collectors.toSet());
@@ -257,11 +253,13 @@ class InformerManager<R extends HasMetadata, C extends Informable<R>>
   }
 
   @Override
+  public Stream<R> byIndexStream(String indexName, String indexKey) {
+    return sources.values().stream().flatMap(s -> s.byIndexStream(indexName, indexKey));
+  }
+
+  @Override
   public List<R> byIndex(String indexName, String indexKey) {
-    return sources.values().stream()
-        .map(s -> s.byIndex(indexName, indexKey))
-        .flatMap(List::stream)
-        .collect(Collectors.toList());
+    return byIndexStream(indexName, indexKey).toList();
   }
 
   @Override
